# todolist-rs

./: Cargo.toml  README.md
src/: lib.rs
static/: index.css  index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
